--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,34 @@
   --btn-text-color-activ: #ffffff;
     
 }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+p, h1, h2, h3, h4, h5, h6{
+margin: 0;
+}
+ul{
+  margin: 0;
+  padding-left: 0;
+}
+button{
+  cursor: pointer;
+}
+address{
+  font-style: normal;
+  display: block;
+}
+img{
+  display: block;
+}
 body {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   color: #2e2f42;
-  background-color: #ffffff;
+  /* background-color: #f69696; */
   }
 .link {
   text-decoration: none;
@@ -21,27 +44,66 @@ body {
 .list {
   list-style: none;
 }
+.section {
+padding: 120px;
+}
+.container{
+  max-width: 1158px;
+   padding: 0 15px;
+  margin: 0 auto;
+  outline: 2px solid red;
+}
 /* Header */
  .header {
 }
-.header-navigation {
+.header-container {
+display: flex;
+align-items: center;
+border-bottom-width: 2px;
+border-bottom-style: solid;
+border-bottom-color: var(--second-bg-color);
 }
+.header-navigation {
+  display: flex;
+  margin-right: 332px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+ }
+.adress-container{
+  display: flex;
+}
+.header-container{
+  display: flex;
+ }
+
+ .header-list-container{
+display: flex;
+ }
 .header-logo {
+  margin-right: 76px;
+  display: block;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.33;
+  color: var(--main-text-color);
 }
 .header-logo-web {
   color: blue;
 }
 .header-list {
+  display: flex;
    }
 .header-list-item {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.33;
   letter-spacing: 0.02em;
+ 
+  }
+
+  .header-list-item + .header-list-item {
+margin-left: 40px;
   }
 .header-nav:focus,
 .header-nav:hover,
@@ -49,23 +111,28 @@ body {
   color: #434455;
 }
 .header-tel {
+  display: flex;
 }
-.header-tel-list {
+.header-tel-list + .header-tel-list {
+  margin-left: 40px;
  }
 .header-tel-link {
   font-size: 16px;
   line-height: 1.33;
   letter-spacing: 0.02em;
   }
-.kontakts {
-    font-style: normal;
-  } 
+
 
 /* ------------Banner-------------*/
 .banner {
   background-color: #2e2f42;
 }
 .banner-text {
+  display: block;
+  max-width: 700px;
+  margin: 0 auto;
+  margin-bottom: 48px;
+  padding-top: 188px;
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
@@ -73,6 +140,12 @@ body {
   color: #ffffff;
 }
 .banner-btn {
+ display: block;
+ margin: 0 auto;
+  border-radius: 4px;
+  width: 169px;
+  height: 56px;
+  justify-content: center;
   font-family: inherit;
   background: var(--btn-bg-color-activ);
   font-weight: 500;
@@ -80,6 +153,11 @@ body {
   line-height: 1.5;
   align-items: center;
   color: var(--btn-text-color-activ)
+}
+.banner-container {
+height: 600px;
+justify-content: center;
+
 }
 /* .banner-btn:focus,
 .banner-btn:hover {
@@ -101,13 +179,25 @@ background-color: var(--btn-bg-color-activ);} */
   margin: -1px;
 }
 .feature {
+  
 }
 .feature-tytle {
 }
 .feature-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 120px;
+  margin-bottom: 120px;
+  gap: 24px;
+
 }
 .feature-list-item {
-}
+  width: 264px;
+ }
+/* .feature-list-item :nth-child(4n) {
+margin-right: 0;} */
+
+
 .feature-list-tytle {
   font-weight: 500;
   font-size: 20px;
@@ -119,6 +209,7 @@ background-color: var(--btn-bg-color-activ);} */
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--second-text-color);
+
 }
 /* ---------------------promo ---------------------*/
 promo {
@@ -129,8 +220,12 @@ promo {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .promo-list {
+  display: flex;
+  gap: 24px;
+  margin-bottom: 120px;
 }
 .promo-list-item {
 }
@@ -141,24 +236,35 @@ promo {
 .team-tytel {
   font-size: 36px;
   line-height:1.11
-  text-align:center;
   letter-spacing: 0.02em;
   text-transform:capitalize;
+  padding-top: 120px;
+  margin-bottom: 72px;
+  text-align: center;
+  
 }
 .team-list {
+display: flex;
+gap: 24px;
 }
 .team-list-item {
+width: calc(100% - 72px)/4;
 }
 .team-name {
 font-weight: 500;
+text-align: center;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
+margin-bottom: 8px;
   }
 .team-name-backgraund {
+  padding-top: 32px;
+  padding-bottom: 32px;
   background-color: #ffffff;
 }
 .team-text {
+  text-align: center;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--second-text-color);
@@ -167,7 +273,13 @@ letter-spacing: 0.02em;
 /* Footer */
 footer {
   background: #2e2f42;
+  height: 310px;
 }
+.footer-container {
+padding-top: 100px;
+margin-bottom: 100px;
+}
+
 .footer-link {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -178,20 +290,35 @@ footer {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
+  margin-left: 156px;
+  margin-bottom: 16px;
 }
 .footer-link-web {
   color: #4d5ae5;
+  
 }
 .footer-text {
+  max-width: 264px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #e7e9fc;
+  margin-left: 156px;
 }
 /* -------------Filtres-------- */
 .filtres{
+  display: flex;
+  gap: 24px;
+  margin-top: 92px;
+  margin-bottom: 92px;
+  justify-content: center;
+
 }
 .filtres-btn {
+    height: 48px;
+    padding: 12px 24px;
+    border: 1px solid #E7E9FC;
+    border-radius: 4px;
     font-family: inherit;
     background: var(--btn-bg-color);
     font-weight: 500;
@@ -200,6 +327,7 @@ footer {
     align-items: center;
     color: var(--btn-text-color); 
    }
+
 .filtres-btn:focus,
 .filtres-btn:hover {
 cursor: pointer;
@@ -208,9 +336,20 @@ background-color: var(--btn-bg-color-activ);
 }
 /* ---------Projekt Cards -------*/
 .cards-list{
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 .cards-list-item {
-}
+  }
+  .cards-list-text {
+   border: 2px solid #F4F4FD; 
+   border-top:none ;
+   padding-top: 32px;
+   padding-bottom: 32px;
+  }
+
 .cards-foto {
 }
 .cards-list-title {
@@ -218,6 +357,7 @@ font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
+margin-bottom: 8px;
 }
 .cards-text {
 font-size: 16px;
