--- a/css/styles.css
+++ b/css/styles.css
@@ -111,8 +111,14 @@ margin-left: 40px;
 .header-nav:focus,
 .header-nav:hover,
 .header-nav.current {
-  color: var(--main-text-color);
+  color: var(--btn-bg-color-activ);
 }
+
+.header-tel-list:focus,
+.header-tel-list:hover {
+  color: var(--btn-bg-color-activ);
+}
+
 .header-tel {
   display: flex;
 }
@@ -314,10 +320,14 @@ padding-bottom: 100px;
   color: #e7e9fc;
 }
 /* -------------Filtres-------- */
+.portfolio{
+  padding-top: 108px;
+  padding-bottom: 120px;
+}
+
 .filtres{
   display: flex;
   gap: 24px;
-  margin-top: 108px;
   margin-bottom: 72px;
   justify-content: center;
 
@@ -344,7 +354,6 @@ background-color: var(--btn-bg-color-activ);
 }
 /* ---------Projekt Cards -------*/
 .cards-list{
-  padding-bottom: 120px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
